add code snippet